[project]
name = "collabchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.7",
    "altair==5.5.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dotenv==0.9.9",
    "fonttools==4.57.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "narwhals==1.35.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pluggy==1.5.0",
    "protobuf==5.29.4",
    "pyarrow==19.0.1",
    "pydeck==0.9.1",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "pytest-asyncio==0.23.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.44.1",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "watchdog==6.0.0",
]
